# xgen_doc2chunk

./: pyproject.toml
xgen_doc2chunk/core/: document_processor.py
xgen_doc2chunk/core/processor/: base_handler.py  docx_handler.py  excel_handler.py  image_file_handler.py  pdf_handler.py  ppt_handler.py
