[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xgen-doc2chunk"
version = "0.3.2"
description = "Convert raw documents into AI-understandable context with intelligent text extraction, table detection, and semantic chunking"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
    {name = "master0419", email = "7slwm7@khu.ac.kr"},
]
maintainers = [
    {name = "master0419", email = "7slwm7@khu.ac.kr"},
]
keywords = [
    "document-processing",
    "pdf",
    "ocr",
    "text-extraction",
    "chunking",
    "ai",
    "llm",
    "langchain",
    "hwp",
    "docx",
    "xlsx",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-core>=2.27",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "orjson>=3.11.6",
    "psutil>=6.0",
    "pandas>=2.2",
    "langchain>=1.2.18,<2",
    "langchain-aws>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3,<2",
    "langchain-openai>=1.1.14",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.1.3",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.10,<1.2",
    "langsmith>=0.8.0",
    "beautifulsoup4>=4.12",
    "docx2pdf>=0.1.8",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "pymupdf>=1.26.7",
    "pdfplumber>=0.11.9",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "olefile>=0.47",
    "pyhwp>=0.1b15",
    "chardet>=5.2",
    "pi-heif>=1.0",
    "pdfminer-six>=20251230",
    "pdf2image>=1.17",
    "pytesseract>=0.3.13",
    "striprtf>=0.0.29",
    "cachetools>=6.0",
]

[project.urls]
Homepage = "https://github.com/master0419/doc2chunk"
Documentation = "https://github.com/master0419/doc2chunk#readme"
Repository = "https://github.com/master0419/doc2chunk.git"
Issues = "https://github.com/master0419/doc2chunk/issues"
Changelog = "https://github.com/master0419/doc2chunk/releases"

[tool.hatch.build.targets.wheel]
packages = ["xgen_doc2chunk"]

[tool.hatch.build.targets.sdist]
include = [
    "xgen_doc2chunk/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    "/.git",
    "/.venv",
    "/__pycache__",
    "*.pyc",
    "test/",
    "temp/",
    "libs/",
]
